[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Menu_Buttons/Blank_button_locked.png" type="Texture" id=1]
[ext_resource path="res://UI/slkscr.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Menu_Buttons/Blank_button.png" type="Texture" id=3]
[ext_resource path="res://UI/Menu_Buttons/Blank_button_light.png" type="Texture" id=4]
[ext_resource path="res://UI/Menu_Theme.tres" type="Theme" id=6]
[ext_resource path="res://UI/Level_Select/Level_Select_Button.gd" type="Script" id=7]

[sub_resource type="Animation" id=10]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 0.00112177 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=11]
size = 40
outline_size = 4
outline_color = Color( 0.45098, 0.152941, 0.360784, 1 )
font_data = ExtResource( 2 )

[node name="Level_Select_Button" type="TextureButton"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
rect_pivot_offset = Vector2( 40, 40 )
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 1 )
expand = true
stretch_mode = 4
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hover = SubResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 13.0
margin_top = 19.0
margin_right = 66.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 0.894118, 0.470588, 1 )
custom_fonts/font = SubResource( 11 )
text = "10"

[connection signal="focus_entered" from="." to="." method="_on_Level_Select_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Level_Select_Button_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Level_Select_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Level_Select_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Level_Select_Button_pressed"]
